--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,22 @@
 			<artifactId>assertj-core</artifactId>
 			<version>3.19.0</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.32.Final</version>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.5.4</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
