--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.platform=mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sielekthor?useSSL=false&serverTimezone=Asia/Jakarta
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.properties.hibernet.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
